# HLang

./: .gitignore  CMakeLists.txt  HBaseInterface.h  HBool.cpp  HBool.h  HBuiltin.cpp  HBuiltin.h  HByte.cpp  HByte.h  HDomain.cpp  HDomain.h  HExecutor.cpp  HExecutor.h  HFunction.cpp  HFunction.h  HIf.cpp  HIf.h  HInt.cpp  HInt.h  HLang.aps  HLang.cpp  HLang.h  HLang.pri  HLang.pro  HLang.sln  HLang.vcxproj  HLang.vcxproj.filters  HObject.h  HPushButton.cpp  HPushButton.h  HString.cpp  HString.h  HTcpSocket.cpp  HTcpSocket.h  HVector.cpp  HVector.h  HVoid.cpp  HWindow.cpp  HWindow.h  HWindow.ui  (+21 more)
Analyst/: Analyst.cpp  Analyst.vcxproj  Analyst.vcxproj.filters
Front/: HLang.cpp  commandline.cpp  commandline.h  commandline.ui
GeneratedFiles/: ui_HWindow.h
GeneratedFiles/test/: moc_HPushButton.cpp  moc_HWindow.cpp  moc_commandline.cpp
HBase/: HBaseInterface.h  HBuiltin.cpp  HBuiltin.h  HLang.cpp  HLang.h  HObject.h
HBase/HData/: HBool.cpp  HBool.h  HFile.cpp  HFile.h  HInt.cpp  HInt.h  HString.cpp  HString.h  HVector.cpp  HVector.h  HVoid.cpp  HVoid.h
HBase/HLogic/: HClass.cpp  HClass.h  HCodes.cpp  HCodes.h  HFunction.cpp  HFunction.h  HIf.cpp  HIf.h  HWhile.cpp  HWhile.h
HBase/HNetwork/: HTcpSocket.cpp  HTcpSocket.h
HGui/: HPushButton.cpp  HPushButton.h  HWindow.cpp  HWindow.h
HLangDLL/: CMakeLists.txt  HClass.h  HFunction.cpp  HFunction.h  HLangDLL.cpp  HLangDLL.h  HObject.cpp  HObject.h  class.cpp  class.h  execable.cpp  execable.h
Main/: HClass.cpp  HClass.h  HObject.cpp  HObject.h  Main.cpp  Main.vcxproj  Main.vcxproj.filters  dllmain.cpp  memorystack.cpp  memorystack.h
base/: HBool.cpp  HBool.h  HByte.cpp  HByte.h  HDllLoader.cpp  HDllLoader.h  HDomain.cpp  HDomain.h  HExecutor.cpp  HExecutor.h  HFunction.cpp  HFunction.h  HInt.cpp  HInt.h  HLang.vcxproj  HLang.vcxproj.filters  HObject.h  HString.cpp  HString.h  HVector.cpp  HVector.h  HVoid.cpp  HVoid.h  base.vcxproj  base.vcxproj.filters  main.cpp
qt/: HQHelloWorld.cpp  HQHelloWorld.h  qt.cpp  qt.h  qt.pro  qt.vcxproj  qt.vcxproj.filters  qt_global.h
std/: HHelloWorld.cpp  HHelloWorld.h  HMap.cpp  HMap.h  HString.cpp  HString.h  HVector.cpp  dllmain.cpp  std.cpp  std.vcxproj  std.vcxproj.filters
